# Phase-1

./: pyproject.toml  requirements.txt
agent-resources/: LLMs_PydanticAI_docs.txt
agent-resources/mcps/: firecrawl.json
iterations/v1-single-agent/: .gitignore  additional_policies.sql  crawl_pydantic_ai_docs.py  fix_search_function.sql  pydantic_ai_coder.py  requirements.txt  site_pages.sql  streamlit_ui.py  update_embedding_column.sql
iterations/v2-agentic-workflow/: .gitignore  agent_graph.py  archon_graph.py  crawl_pydantic_ai_docs.py  langgraph.json  pydantic_ai_coder.py  requirements.txt  site_pages.sql  streamlit_ui.py
iterations/v3-mcp-support/: .gitignore  INSTRUCTIONS_TO_RUN.md  PROGRESS_ISSUE_SOLUTION_FIX.md  README.md  example_prompt.md  graph_service.py  mcp-config.json  mcp.json-path.txt  mcp_server.py  requirements.txt  requirements_modified.txt  setup_mcp.py  streamlit_ui.py
iterations/v3-mcp-support/archon/: archon_graph.py  crawl_pydantic_ai_docs.py  pydantic_ai_coder.py
iterations/v3-mcp-support/meta_agent/: langgraph.json  pydantic_ai_coder.py
iterations/v4-streamlit-ui-overhaul/: .gitignore  future_enhancements.py  graph_service.py  streamlit_ui.py
iterations/v4-streamlit-ui-overhaul/meta_agent/: archon_graph.py
iterations/v6-tool-library-integration/: Dockerfile  README.md  REVIEWER_BRIEF.md  graph_service.py  requirements.txt  run_docker.py  streamlit_ui.py
iterations/v6-tool-library-integration/evaluation/: benchmarks.py  generate_artifacts.py  run_eval.py  simulate_data.py
utils/: site_pages.sql
(+47 files in other folders)
