[project]
name = "phase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "devtools>=0.12.2",
    "google-genai>=1.42.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-sdk>=0.3.1",
    "langsmith>=0.6.0",
    "logfire>=4.16.0",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pydantic-ai-slim[google]>=1.0.17",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "supabase>=2.27.0",
]
